deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santa-backend
  namespace: santa
  labels:
    app: santa-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: santa-backend
  template:
    metadata:
      labels:
        app: santa-backend
    spec:
      containers:
      - name: santa-backend
        image: docker.io/bigg01/santa-backend:latest
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/scores
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/scores
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 5
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: santa-backend-pvc
